--- a/src/main/resources/templates/indexAdmin.html
+++ b/src/main/resources/templates/indexAdmin.html
@@ -20,12 +20,19 @@
             </a>
         </header>
 
-        <div class="mx-20">
+        <div class="mx-20 flex flex-col items-start">
             <a
                 href="/cadastro/dentista"
-                class="mb-4 bg-blue-400 hover:bg-blue-500 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline self-end"
+                class="mb-4 bg-blue-400 hover:bg-blue-500 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
             >
                 Cadastro de Dentista
+            </a>
+
+            <a
+                href="/listagem/usuario"
+                class="mb-4 bg-blue-400 hover:bg-blue-500 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+            >
+                Listagem de Usuários
             </a>
         </div>
     </body>
