--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt_BR" xmlns:th="http://www.w3.org/1999/xhtml">
-    <head th:replace="~{fragments :: header('Login')}"></head>
+    <head th:replace="~{fragments :: mainHeader('Login')}"></head>
 
     <body class="bg-sky-100">
         <div class="flex h-screen flex-col items-center justify-center">
