--- a/src/main/resources/templates/agendamento.html
+++ b/src/main/resources/templates/agendamento.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html lang="pt_BR">
 
-<head th:replace="~{fragments :: header('Agendamento')}"></head>
+<head th:replace="~{fragments :: mainHeader('Agendamento')}"></head>
 
 <body class="bg-sky-100">
+<header th:replace="~{fragments :: header('Agendamento')}"></header>
     <div class="flex flex-col my-4 items-center">
         <form class="border rounded max-w-lg w-full flex flex-col px-8 pt-3 pb-5 bg-white shadow-md"
             action="/agendamento" enctype="utf8" method="POST" th:object="${agendamentoDTO}">
@@ -45,7 +46,7 @@
                     <div>
                         <input id="radioHora2" name="horaConsulta" th:field="*{horaConsulta}" type="radio"
                             value="10:00">
-                        <label for="radioHora1">
+                        <label for="radioHora2">
                             10:00
                         </label>
                     </div>
@@ -53,7 +54,7 @@
                     <div>
                         <input id="radioHora3" name="horaConsulta" th:field="*{horaConsulta}" type="radio"
                             value="11:00">
-                        <label for="radioHora1">
+                        <label for="radioHora3">
                             11:00
                         </label>
                     </div>
@@ -62,7 +63,7 @@
                     <div>
                         <input id="radioHora4" name="horaConsulta" th:field="*{horaConsulta}" type="radio"
                             value="13:00">
-                        <label for="radioHora1">
+                        <label for="radioHora4">
                             13:00
                         </label>
                     </div>
@@ -70,7 +71,7 @@
                     <div>
                         <input id="radioHora5" name="horaConsulta" th:field="*{horaConsulta}" type="radio"
                             value="14:00">
-                        <label for="radioHora1">
+                        <label for="radioHora5">
                             14:00
                         </label>
                     </div>
@@ -78,7 +79,7 @@
                     <div>
                         <input id="radioHora6" name="horaConsulta" th:field="*{horaConsulta}" type="radio"
                             value="15:00">
-                        <label for="radioHora1">
+                        <label for="radioHora6">
                             15:00
                         </label>
                     </div>
