--- a/src/main/resources/templates/agendamentoDentista.html
+++ b/src/main/resources/templates/agendamentoDentista.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html lang="pt_BR">
 
-<head th:replace="~{fragments :: header('Confirmação de Agendamento')}"></head>
+<head th:replace="~{fragments :: mainHeader('Confirmação de Agendamento')}"></head>
 
 <body class="bg-sky-100">
+<header th:replace="~{fragments :: header('Agendamento')}"></header>
     <div class="flex flex-col my-4 items-center">
         <div class="border rounded max-w-lg w-full flex flex-col px-8 pt-3 pb-5 bg-white shadow-md">
 
@@ -13,39 +14,38 @@
                 Informações do Agendamento
             </h2>
 
-            <label class="text-gray-800 font-semibold">Tipo de Agendamento: <span class="font-normal text-gray-400 outline-blue-400 mb-4" th:text="${agendamento.getTipo().getDescricao()}"></span></label>
+            <label class="text-gray-800 font-semibold">Tipo de Agendamento: <span class="font-normal text-slate-500 outline-blue-400 mb-4" th:text="${agendamento.getTipo().getDescricao()}"></span></label>
             
-            <label class="text-gray-800 font-semibold">Dentista: <span class="font-normal text-gray-400 outline-blue-400 mb-4" th:text="${agendamento.getDentista().getPessoa().getNome()}"></span></label>
+            <label class="text-gray-800 font-semibold">Dentista: <span class="font-normal text-slate-500 outline-blue-400 mb-4" th:text="${agendamento.getDentista().getPessoa().getNome()}"></span></label>
             
-            <label class="text-gray-800 font-semibold">Paciente: <span class="font-normal text-gray-400 outline-blue-400 mb-4" th:text="${agendamento.getPaciente().getPessoa().getNome()}"></span></label>
+            <label class="text-gray-800 font-semibold">Paciente: <span class="font-normal text-slate-500 outline-blue-400 mb-4" th:text="${agendamento.getPaciente().getPessoa().getNome()}"></span></label>
 
-            <label class="text-gray-800 font-semibold">Data da Consulta: <span class="font-normal text-gray-400 outline-blue-400 mb-4" th:text="${#dates.format(agendamento.getDataConsulta(),'dd/MM/yyyy')}"></span></label>
+            <label class="text-gray-800 font-semibold">Data da Consulta: <span class="font-normal text-slate-500 outline-blue-400 mb-4" th:text="${#dates.format(agendamento.getDataConsulta(),'dd/MM/yyyy')}"></span></label>
 
-            <label class="text-gray-800 font-semibold">Hora da Consulta: <span class="font-normal text-gray-400 outline-blue-400 mb-4" th:text="${#dates.format(agendamento.getHoraConsulta(),'HH:mm')}"></span></label>
+            <label class="text-gray-800 font-semibold">Hora da Consulta: <span class="font-normal text-slate-500 outline-blue-400 mb-4" th:text="${#dates.format(agendamento.getHoraConsulta(),'HH:mm')}"></span></label>
 
-            <label class="text-gray-800 font-semibold">Observações do Paciente: <span class="font-normal text-gray-400 outline-blue-400 mb-4" th:text="${agendamento.getObservacoesPaciente()}"></span></label>
+            <label class="text-gray-800 font-semibold">Observações do Paciente: <span class="font-normal text-slate-500 outline-blue-400 mb-4" th:text="${agendamento.getObservacoesPaciente()}"></span></label>
 
-            <label class="text-gray-800 font-semibold">Forma de Pagamento: <span class="font-normal text-gray-400 outline-blue-400 mb-4" th:text="${agendamento.getFormaPagamento().getDescricao()}"></span></label>
+            <label class="text-gray-800 font-semibold">Forma de Pagamento: <span class="font-normal text-slate-500 outline-blue-400 mb-4" th:text="${agendamento.getFormaPagamento().getDescricao()}"></span></label>
 
-            <form method="POST" th:action="@{/agendamento/__${agendamento.getId()}__}" enctype="utf8"
+            <form method="POST" class="flex flex-col" th:action="@{/agendamento/__${agendamento.getId()}__}" enctype="utf8"
                 th:object="${agendamentoDTO}">
                 <h2 class="text-gray-700 font-bold mt-5 mb-1 uppercase">
                     Informações Adicionais
                 </h2>
 
                 <label class="font-medium text-gray-700 block" for="horaFim">Hora do Fim da Consulta (Tempo Estimado)</label>
-                <input class="form-input bg-slate-100 text-gray-700 outline-blue-400 mb-4" type="time" th:field="*{horaFim}" id="horaFim" name="horaFim">
+                <input class="form-input bg-slate-100 text-gray-700 outline-blue-400 mb-4" type="text" th:field="*{horaFim}" id="horaFim" name="horaFim">
                 <div th:replace="~{fragments :: listaErros('horaFim')}"></div>
 
+
                 <label class="font-medium text-gray-700 block" for="inputObservacoesDentista">Observações</label>
-                <textarea class="form-input bg-slate-100 text-gray-700 outline-blue-400 mb-4" th:field="*{observacoesDentista}" id="inputObservacoesDentista" name="observacoesDentista"></textarea>
-
+                <textarea class="form-input bg-slate-100 text-gray-700 outline-blue-400 mb-4 resize-none" rows="3" th:field="*{observacoesDentista}" id="inputObservacoesDentista" name="observacoesDentista"></textarea>
                 <div class="mt-3 self-end">
-                    <a class="self-center mb-4 border border-blue-400 bg-white text-blue-400 hover:text-blue-500 hover:border-blue-500 font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+                    <a class="mb-4 border border-blue-400 bg-white text-blue-400 hover:text-blue-500 hover:border-blue-500 font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
                     href="/">Cancelar</a>
-                    <button type="submit" class="self-center mb-4 bg-blue-400 hover:bg-blue-500 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Confirmar Agendamento</button>
+                    <button type="submit" class="mb-4 bg-blue-400 hover:bg-blue-500 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Confirmar Agendamento</button>
                 </div>
-
             </form>
         </div>
     </div>
