--- a/src/main/resources/templates/cadastroPaciente.html
+++ b/src/main/resources/templates/cadastroPaciente.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt_BR" xmlns:th="http://www.w3.org/1999/xhtml">
-    <head th:replace="~{fragments :: header('Cadastro de Paciente')}"></head>
+    <head th:replace="~{fragments :: mainHeader('Cadastro de Paciente')}"></head>
 
     <body class="bg-sky-100">
         <div class="flex flex-col items-center my-4 justify-center">
