--- a/src/main/resources/templates/indexDentista.html
+++ b/src/main/resources/templates/indexDentista.html
@@ -1,43 +1,52 @@
 <!doctype html>
 <html lang="pt_BR" xmlns:th="http://www.w3.org/1999/xhtml">
+
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-          name="viewport">
-    <meta content="ie=edge" http-equiv="X-UA-Compatible">
-    <title>Dashboard</title>
+        name="viewport" />
+    <meta content="ie=edge" http-equiv="X-UA-Compatible" />
+    <title th:text="${titulo}"></title>
+
+    <link rel="icon" type="image/x-icon" th:href="@{/images/favicon.png}" />
+    <link th:href="@{/css/tailwind.css}" rel="stylesheet" />
 
     <link href="https://cdn.jsdelivr.net/npm/@event-calendar/build@2.3.3/event-calendar.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/@event-calendar/build@2.3.3/event-calendar.min.js"></script>
-
 </head>
-<body>
-    <a href="/logout">Sair</a>
-    <h1 th:text="${usuario.pessoa.nome}"></h1>
 
-    <div class="row">
-        <div class="col-md-6">
-            <h2>Agendamentos</h2>
-            <table class="table">
-                <thead class="thead-dark">
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Nome</th>
-                    <th scope="col">Horário</th>
-                    <th scope="col">Ações</th>
+<body class="bg-sky-100">
+
+    <header th:replace="~{fragments :: header('Agendamento')}"></header>
+
+    <div class="flex items-start justify-evenly">
+        <div class="border rounded max-w-xl w-full flex flex-col px-8 pb-10 pt-3 bg-white shadow-md">
+            <h1 class="font-bold text-xl text-center mt-3 mb-6 text-gray-700">
+                Agendamentos
+            </h1>
+            <table class="min-w-full divide-y divide-slate-800">
+                <tr class="text-slate-500">
+                    <th class="p-2 font-normal text-left uppercase" scope="col">Nome</th>
+                    <th class="p-2 font-normal text-left uppercase" scope="col">Horário</th>
+                    <th class="p-2 font-normal text-left uppercase" scope="col">Ações</th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="agendamento : ${agendamentos}">
-                    <th scope="row">1</th>
-                    <td th:text="${agendamento.getPaciente().getPessoa().getNome()}"></td>
-                    <td th:text="${#dates.format(agendamento.getDataConsulta(),'dd/MM/yyyy') + ' ' + #dates.format(agendamento.getHoraConsulta(),'HH:mm')}"></td>
-                    <td><a class="btn" alt="confirmarAgendamento" th:href="@{/agendamento/{id}(id=${agendamento.getId()})}">✓</a></td>
+                <tr class="odd:bg-white even:bg-slate-100" th:each="agendamento : ${agendamentos}">
+                    <td class="p-2 text-gray-700 font-semibold" th:text="${agendamento.getPaciente().getPessoa().getNome()}"></td>
+                    <td class="p-2 text-gray-700"
+                            th:text="${#dates.format(agendamento.getDataConsulta(),'dd/MM/yyyy') + ' ' + #dates.format(agendamento.getHoraConsulta(),'HH:mm')}">
+                    </td>
+                    <td class="p-2"><a class="text-blue-400 hover:text-blue-500 underline font-bold leading-loose p-0" alt="confirmarAgendamento"
+                           th:href="@{/agendamento/{id}(id=${agendamento.getId()})}" >Confirmar</a></td>
                 </tr>
                 </tbody>
             </table>
         </div>
-        <div class="col-md-6">
+        <div class="border rounded max-w-5xl w-full flex flex-col px-8 pb-10 pt-3 bg-white shadow-md">
+            <h1 class="font-bold text-xl text-center mt-3 text-gray-700">
+                Consultas
+            </h1>
             <div id="calendario-agendamentos"></div>
         </div>
     </div>
@@ -73,7 +82,6 @@
         nowIndicator: true,
         selectable: false,
         editable: false,
-        height: '900px',
     });
 
     function createEvents() {
@@ -107,4 +115,5 @@
     }
 
 </script>
+
 </html>
