--- a/src/main/resources/templates/listagemUsuarios.html
+++ b/src/main/resources/templates/listagemUsuarios.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt_BR" xmlns:th="http://www.w3.org/1999/xhtml">
-    <head th:replace="~{fragments :: header('Cadastro de Paciente')}"></head>
+    <head th:replace="~{fragments :: mainHeader('Cadastro de Paciente')}"></head>
 
     <body class="bg-sky-100">
+    <header th:replace="~{fragments :: header('Agendamento')}"></header>
         <div class="flex flex-col items-center my-4 justify-center">
             <div
                 class="bg-white shadow-md px-8 pt-6 pb-8 flex flex-col items-center"
